# backend/app/Http/Controllers/Swagger/Schemas/CommonSchemas.php
@@ -12,6 +12,15 @@ namespace App\Http\Controllers\Swagger\Schemas;
  *
  * @OA\Schema(schema="typeTimestampNullable", type="string", nullable=true,
  *   example="2024-12-11T13:32:19.000000Z"),
+ *
+ * @OA\Schema(
+ *  schema="errorValidationResponse",
+ *  type="object",
+ *  required={"errors"},
+ *  @OA\Property(property="errors", type="object",
+ *    @OA\Property(property="requestParam", type="array", @OA\Items())
+ *  )
+ * )
  */
 class CommonSchemas
 {
