# backend/resources/swagger/v1/openapi.json
@@ -183,14 +183,404 @@
                     }
                 ]
             }
+        },
+        "/api/coordinates": {
+            "get": {
+                "tags": [
+                    "Coordinate"
+                ],
+                "summary": "Получить список отслеживаемых географических точек",
+                "operationId": "GetListCoordinate",
+                "parameters": [
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "limit",
+                        "in": "query",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "required": [
+                                        "success"
+                                    ],
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "default": true
+                                        },
+                                        "data": {
+                                            "required": [
+                                                "current_page",
+                                                "last_page",
+                                                "per_page",
+                                                "total",
+                                                "data"
+                                            ],
+                                            "properties": {
+                                                "current_page": {
+                                                    "type": "integer"
+                                                },
+                                                "last_page": {
+                                                    "type": "integer"
+                                                },
+                                                "per_page": {
+                                                    "type": "integer"
+                                                },
+                                                "total": {
+                                                    "type": "integer"
+                                                },
+                                                "data": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "$ref": "#/components/schemas/CoordinateItem"
+                                                    }
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "$ref": "#/components/responses/errorResponseUnauthorized"
+                    },
+                    "422": {
+                        "$ref": "#/components/responses/errorResponseBadRequest"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "post": {
+                "tags": [
+                    "Coordinate"
+                ],
+                "summary": "Добавить в список отслеживаемых географических точек",
+                "operationId": "StoreCoordinate",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "place_name",
+                                    "lat",
+                                    "lon"
+                                ],
+                                "properties": {
+                                    "place_name": {
+                                        "type": "string"
+                                    },
+                                    "lat": {
+                                        "type": "number",
+                                        "format": "float"
+                                    },
+                                    "lon": {
+                                        "type": "number",
+                                        "format": "float"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "required": [
+                                        "success"
+                                    ],
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "default": true
+                                        },
+                                        "data": {
+                                            "$ref": "#/components/schemas/CoordinateItem"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "$ref": "#/components/responses/errorResponseUnauthorized"
+                    },
+                    "422": {
+                        "$ref": "#/components/responses/errorResponseBadRequest"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/coordinates/{id}": {
+            "get": {
+                "tags": [
+                    "Coordinate"
+                ],
+                "summary": "Получить отслеживаемую географическую точеку",
+                "operationId": "GetItemCoordinate",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "required": [
+                                        "success"
+                                    ],
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "default": true
+                                        },
+                                        "data": {
+                                            "$ref": "#/components/schemas/CoordinateItem"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "$ref": "#/components/responses/errorResponseUnauthorized"
+                    },
+                    "422": {
+                        "$ref": "#/components/responses/errorResponseBadRequest"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "put": {
+                "tags": [
+                    "Coordinate"
+                ],
+                "summary": "Обновить отслеживаемую географическую точеку",
+                "operationId": "UpdateCoordinate",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "place_name",
+                                    "lat",
+                                    "lon"
+                                ],
+                                "properties": {
+                                    "place_name": {
+                                        "type": "string"
+                                    },
+                                    "lat": {
+                                        "type": "number",
+                                        "format": "float"
+                                    },
+                                    "lon": {
+                                        "type": "number",
+                                        "format": "float"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "required": [
+                                        "success"
+                                    ],
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "default": true
+                                        },
+                                        "data": {
+                                            "$ref": "#/components/schemas/CoordinateItem"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "$ref": "#/components/responses/errorResponseUnauthorized"
+                    },
+                    "422": {
+                        "$ref": "#/components/responses/errorResponseBadRequest"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "delete": {
+                "tags": [
+                    "Coordinate"
+                ],
+                "summary": "Удалить отслеживаемую географическую точеку",
+                "operationId": "DeleteItemCoordinate",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "required": [
+                                        "success"
+                                    ],
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "default": true
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "$ref": "#/components/responses/errorResponseUnauthorized"
+                    },
+                    "422": {
+                        "$ref": "#/components/responses/errorResponseBadRequest"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
         }
     },
     "components": {
         "schemas": {
+            "CoordinateItem": {
+                "required": [
+                    "place_name",
+                    "lat",
+                    "lon",
+                    "id",
+                    "created_at",
+                    "updated_at"
+                ],
+                "properties": {
+                    "place_name": {
+                        "type": "string"
+                    },
+                    "lat": {
+                        "type": "number",
+                        "format": "float"
+                    },
+                    "lon": {
+                        "type": "number",
+                        "format": "float"
+                    },
+                    "id": {
+                        "type": "integer"
+                    },
+                    "created_at": {
+                        "$ref": "#/components/schemas/typeTimestampNullable"
+                    },
+                    "updated_at": {
+                        "$ref": "#/components/schemas/typeTimestampNullable"
+                    }
+                },
+                "type": "object"
+            },
             "typeTimestampNullable": {
                 "type": "string",
                 "example": "2024-12-11T13:32:19.000000Z",
                 "nullable": true
+            },
+            "errorValidationResponse": {
+                "required": [
+                    "errors"
+                ],
+                "properties": {
+                    "errors": {
+                        "properties": {
+                            "requestParam": {
+                                "type": "array",
+                                "items": {}
+                            }
+                        },
+                        "type": "object"
+                    }
+                },
+                "type": "object"
             },
             "baseError": {
                 "required": [
@@ -315,6 +705,10 @@
         {
             "name": "Auth",
             "description": "Авторизация"
+        },
+        {
+            "name": "Coordinate",
+            "description": "Апи географических мест"
         }
     ]
 }
